kubernetes/apps/paperless-drali/postgres/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: paperless-drali
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
